Logo only on setup page. Fixed flash messages.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<%= image_tag 'logo.png', :border => 0 %>
+
 <div class="page_container">
   
   <p>Magellan is a simple, standalone API explorer written in Rails 3.</p>
