--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -14,11 +14,11 @@ div.field, div.actions {
   margin-bottom: 10px;
 }
 
-#alert {
+#flash_alert {
   color: red;
 }
 
-#notice {
+#flash_notice {
   color: green;
 }
 
