--- a/app/views/global_parameters/index.html.erb
+++ b/app/views/global_parameters/index.html.erb
@@ -9,7 +9,7 @@
   <ul>
   <% @global_params.each do |gp| %>
     <li>
-      <%= gp.name%> = <%= gp.value %>
+      [<%= Parameter::TYPES.key(gp.p_type).to_s %>] <%= gp.name%> = <%= gp.value %>
       <%= link_to "Edit", edit_global_parameter_path(gp) %>
       <%= link_to "Delete", global_parameter_path(gp), :method => :delete, :confirm => "Are you sure?" %>
     </li>
