--- a/app/views/parameters/new.html.erb
+++ b/app/views/parameters/new.html.erb
@@ -1,6 +1,6 @@
 <div class="page_container">
 
-  <h1>New Parameter</h1>
+  <h1><%= @parameter_set.name %> - New Parameter</h1>
 
   <%= render 'form' %>
 
